# typst-editor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/server/: drizzle.config.ts  package-lock.json  package.json  tsconfig.json
apps/server/src/: app.ts  index.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/lib/: history.ts  jwt.ts  password.ts  storage.ts
apps/server/src/middleware/: auth.ts  permissions.ts
apps/server/src/routes/: auth.ts  github.ts  projects.ts  share.ts
apps/server/src/ws/: yjs-server.ts
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/Auth/: AccountSettings.tsx  LoginPage.tsx
apps/web/src/components/Editor/: CompilerOutputPanel.tsx  EditorPanel.tsx
apps/web/src/components/FileTree/: FileTree.tsx
apps/web/src/components/GitHub/: GitHubPanel.tsx  (+1 more)
apps/web/src/hooks/: useTypstCompiler.ts
apps/web/src/lib/: api.ts
apps/web/src/stores/: authStore.ts  projectStore.ts
apps/web/src/workers/: typst-compiler.worker.ts
rust-server/: Cargo.toml
rust-server/src/: config.rs  error.rs  main.rs  state.rs
rust-server/src/auth/: middleware.rs  mod.rs  password.rs
rust-server/src/db/: mod.rs  models.rs  schema.rs
rust-server/src/middleware/: permissions.rs
rust-server/src/routes/: auth_routes.rs  github_routes.rs  health.rs  mod.rs  project_routes.rs  share_routes.rs
rust-server/src/storage/: mod.rs
rust-server/src/ws/: mod.rs  yrs_server.rs
(+11 files in other folders)
